@@ -14,28 +14,24 @@ package org.eclipse.sirius.web.services.editingcontext;
 
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
-import java.util.LinkedHashMap;
+import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.concurrent.TimeUnit;
 
-import org.eclipse.emf.ecore.EPackage;
 import org.eclipse.emf.ecore.resource.Resource;
 import org.eclipse.emf.ecore.resource.ResourceSet;
 import org.eclipse.emf.ecore.util.BasicExtendedMetaData;
 import org.eclipse.emf.edit.domain.AdapterFactoryEditingDomain;
-import org.eclipse.emf.edit.domain.EditingDomain;
 import org.eclipse.sirius.components.core.api.IEditingContext;
+import org.eclipse.sirius.components.core.api.IEditingContextProcessor;
 import org.eclipse.sirius.components.core.api.IEditingContextSearchService;
 import org.eclipse.sirius.components.core.configuration.IRepresentationDescriptionRegistryConfigurer;
 import org.eclipse.sirius.components.emf.ResourceMetadataAdapter;
 import org.eclipse.sirius.components.emf.services.EditingContextCrossReferenceAdapter;
 import org.eclipse.sirius.components.emf.services.JSONResourceFactory;
-import org.eclipse.sirius.components.representations.IRepresentationDescription;
-import org.eclipse.sirius.components.view.View;
-import org.eclipse.sirius.components.view.emf.IViewConverter;
 import org.eclipse.sirius.components.view.util.services.ColorPaletteService;
 import org.eclipse.sirius.emfjson.resource.JsonResource;
 import org.eclipse.sirius.web.persistence.entities.DocumentEntity;
@@ -43,7 +39,6 @@ import org.eclipse.sirius.web.persistence.repositories.IDocumentRepository;
 import org.eclipse.sirius.web.persistence.repositories.IProjectRepository;
 import org.eclipse.sirius.web.services.api.id.IDParser;
 import org.eclipse.sirius.web.services.editingcontext.api.IEditingDomainFactoryService;
-import org.eclipse.sirius.web.services.editingcontext.api.IViewLoader;
 import org.eclipse.sirius.web.services.representations.RepresentationDescriptionRegistry;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -72,21 +67,17 @@ public class EditingContextSearchService implements IEditingContextSearchService
 
     private final List<IRepresentationDescriptionRegistryConfigurer> configurers;
 
-    private final IViewLoader viewLoader;
-
-    private final IViewConverter viewConverter;
+    private final List<IEditingContextProcessor> editingContextProcessors;
 
     private final Timer timer;
 
     public EditingContextSearchService(IProjectRepository projectRepository, IDocumentRepository documentRepository, IEditingDomainFactoryService editingDomainFactoryService,
-            List<IRepresentationDescriptionRegistryConfigurer> configurers, IViewLoader viewLoader, IViewConverter viewConverter, MeterRegistry meterRegistry) {
+            List<IRepresentationDescriptionRegistryConfigurer> configurers, List<IEditingContextProcessor> editingContextProcessors, MeterRegistry meterRegistry) {
         this.projectRepository = Objects.requireNonNull(projectRepository);
         this.documentRepository = Objects.requireNonNull(documentRepository);
         this.editingDomainFactoryService = Objects.requireNonNull(editingDomainFactoryService);
         this.configurers = Objects.requireNonNull(configurers);
-        this.viewLoader = Objects.requireNonNull(viewLoader);
-        this.viewConverter = Objects.requireNonNull(viewConverter);
-
+        this.editingContextProcessors = Objects.requireNonNull(editingContextProcessors);
         this.timer = Timer.builder(TIMER_NAME).register(meterRegistry);
     }
 
@@ -105,6 +96,9 @@ public class EditingContextSearchService implements IEditingContextSearchService
         ResourceSet resourceSet = editingDomain.getResourceSet();
         resourceSet.getLoadOptions().put(JsonResource.OPTION_EXTENDED_META_DATA, new BasicExtendedMetaData(resourceSet.getPackageRegistry()));
         resourceSet.getLoadOptions().put(JsonResource.OPTION_SCHEMA_LOCATION, true);
+
+        EditingContext editingContext = new EditingContext(editingContextId, editingDomain, new HashMap<>(), new ArrayList<>());
+        this.editingContextProcessors.forEach(processor -> processor.preProcess(editingContext));
 
         List<DocumentEntity> documentEntities = new IDParser().parse(editingContextId)
                 .map(this.documentRepository::findAllByProjectId)
@@ -132,36 +126,19 @@ public class EditingContextSearchService implements IEditingContextSearchService
 
         this.logger.debug("{} documents loaded for the editing context {}", resourceSet.getResources().size(), editingContextId);
 
-        var views = this.viewLoader.load();
-        Map<String, IRepresentationDescription> representationDescriptions = this.getRepresentationDescriptions(editingDomain, views);
+        this.computeRepresentationDescriptions(editingContext);
+
+        this.editingContextProcessors.forEach(processor -> processor.postProcess(editingContext));
 
         long end = System.currentTimeMillis();
         this.timer.record(end - start, TimeUnit.MILLISECONDS);
 
-        return Optional.of(new EditingContext(editingContextId, editingDomain, representationDescriptions, views));
+        return Optional.of(editingContext);
     }
 
-    private Map<String, IRepresentationDescription> getRepresentationDescriptions(EditingDomain editingDomain, List<View> views) {
-        Map<String, IRepresentationDescription> representationDescriptions = new LinkedHashMap<>();
+    private void computeRepresentationDescriptions(EditingContext editingContext) {
         var registry = new RepresentationDescriptionRegistry();
         this.configurers.forEach(configurer -> configurer.addRepresentationDescriptions(registry));
-        registry.getRepresentationDescriptions().forEach(representationDescription -> representationDescriptions.put(representationDescription.getId(), representationDescription));
-
-        List<EPackage> accessibleEPackages = this.getAccessibleEPackages(editingDomain);
-        this.viewConverter.convert(views, accessibleEPackages).stream()
-                .filter(Objects::nonNull)
-                .forEach(representationDescription -> representationDescriptions.put(representationDescription.getId(), representationDescription));
-
-        return representationDescriptions;
+        registry.getRepresentationDescriptions().forEach(representationDescription -> editingContext.getRepresentationDescriptions().put(representationDescription.getId(), representationDescription));
     }
-
-    private List<EPackage> getAccessibleEPackages(EditingDomain editingDomain) {
-        var packageRegistry = editingDomain.getResourceSet().getPackageRegistry();
-
-        return packageRegistry.values().stream()
-                .filter(EPackage.class::isInstance)
-                .map(EPackage.class::cast)
-                .toList();
-    }
-
 }
