@@ -82,6 +82,8 @@ The default implementation of the editing context for Sirius Web, which had Siri
 This default implementation will now also contain all the view models properly loaded which should be considered during the lifecycle of the editing context.
 - https://github.com/eclipse-sirius/sirius-web/issues/2796[#2796] [sirius-web] All Flow related configurations have been moved to `sirius-components-flow-starter` module.
 - https://github.com/eclipse-sirius/sirius-web/issues/2883[#2883] [diagram] Add the attribute `resizedByUser` to reactflow nodes and graphql nodes.
+- https://github.com/eclipse-sirius/sirius-web/issues/2926[#2926] [sirius-web] A new `IEditingContextProcessor` has been introduced.
+It allows to execute operations before/after the load of an `IEditingContext` in `EditingContextSearchService`.
 
 
 === Dependency update
@@ -126,6 +128,7 @@ Now, for a multi-valued feature, the values are properly displayed and the delet
 +
 The size of nodes that do not have been resized manually tries to fit the node default size.
 - https://github.com/eclipse-sirius/sirius-web/issues/2792[#2792] [diagram] Add a first version for arrange all support.
+- https://github.com/eclipse-sirius/sirius-web/issues/2926[#2926] [sirius-web] Add a first version of the support for {pre|post}processing of the editing context.
 
 === Improvements
 
